--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,6 +4,7 @@
   "balance": "Balance",
   "/send-asset": "Send Asset",
   "/redeem-asset": "Redeem Asset",
+  "/return-asset": "Return Asset",
   "/send-history": "Send History",
   "view-instructions-link": "View Instructions",
   "download-csv-example-link": "Download CSV Example",
