:lipstick: Updated "asset" to "assets"

--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -2,9 +2,9 @@
   "app-title": "Buzón de Algodex",
   "actions": "Acciones",
   "balance": "Saldo",
-  "/send-asset": "Enviar activo",
-  "/redeem-asset": "Canjear activo",
-  "/return-asset": "Regreso activo",
+  "/send-assets": "Enviar activo",
+  "/redeem-assets": "Canjear activo",
+  "/return-assets": "Regreso activo",
   "/send-history": "Enviar historial",
   "view-instructions-link": "Ver instrucciones",
   "download-csv-example-link": "Descargar ejemplo de CSV",
