:bug: Fixed mobile bottom nav

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,6 +6,10 @@
   "/redeem-assets": "Redeem Assets",
   "/return-assets": "Return Assets",
   "/send-history": "Send History",
+  "/send": "Send",
+  "/redeem": "Redeem",
+  "/return": "Return",
+  "/history": "History",
   "view-instructions-link": "View Instructions",
   "download-csv-example-link": "Download CSV Example",
   "open-algoexplorer-link": "Open AlgoExplorer",
