--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -6,6 +6,10 @@
   "/redeem-assets": "Canjear activo",
   "/return-assets": "Regreso activo",
   "/send-history": "Enviar historial",
+  "/send": "Enviar",
+  "/redeem": "Canjear",
+  "/return": "Regreso",
+  "/history": "historial",
   "view-instructions-link": "Ver instrucciones",
   "download-csv-example-link": "Descargar ejemplo de CSV",
   "open-algoexplorer-link": "Abrir AlgoExplorer",
