--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -5,7 +5,7 @@
   "/send-assets": "Enviar activo",
   "/redeem-assets": "Canjear activo",
   "/return-assets": "Regreso activo",
-  "/send-history": "Enviar historial",
+  "/transaction-history": "Enviar historial",
   "/send": "Enviar",
   "/redeem": "Canjear",
   "/return": "Regreso",
