:bug: Rename balance and hide balance if one input is empty

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "app-title": "Algodex Mailbox",
   "actions": "Actions",
-  "balance": "Balance",
+  "escrow-balance": "Escrow Balance",
   "/send-assets": "Send Assets",
   "/redeem-assets": "Redeem Assets",
   "/return-assets": "Return Assets",
