--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,7 +1,7 @@
 {
   "app-title": "Buzón de Algodex",
   "actions": "Acciones",
-  "balance": "Saldo",
+  "escrow-balance": "Escrow Saldo",
   "/send-assets": "Enviar activo",
   "/redeem-assets": "Canjear activo",
   "/return-assets": "Regreso activo",
