:lipstick: UI fixes and :dizzy: Language translation tol spanish

--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -15,7 +15,37 @@
   "download-csv-example-link": "Descargar ejemplo de CSV",
   "open-algoexplorer-link": "Abrir AlgoExplorer",
   "connect-wallet": "Conectar billetera",
-  "faq": "FAQ",
-  "user-guide": "guía del usuario",
-  "support": "soporte"
+  "faq": "Preguntas más frecuentes",
+  "user-guide": "Guía del usuario",
+  "support": "Soporte",
+  "how-to-send":"Cómo enviar",
+  "how-to-redeem":"Cómo canjear",
+  "decentralized-marketplace-on-Algorand":"Mercado descentralizado en Algorand",
+  "RESOURCES":"RECURSOS",
+  "COMPANY":"EMPRESA",
+  "COMMUNITY":"COMUNIDAD",
+  "disclaimers":"Descargos de responsabilidad",
+  "docs":"Cocumentos",
+  "white-paper":"Papel blanco",
+  "tokenomics":"Tokenómica",
+  "about":"Acerca de",
+  "Stay up to date with info on Algodex updates, new features, and releases by joining our mailing list":"Manténgase actualizado con información sobre actualizaciones, nuevas funciones y lanzamientos de Algodex uniéndose a nuestra lista de correo",
+  "Algodex Mailbox is a decentralized web application that allows users to send Algorand Standard Assets even if recipients haven’t opted into the asset yet":"Algodex Buzón es una aplicación web descentralizada que permite a los usuarios enviar activos estándar de Algorand incluso si los destinatarios aún no han optado por el activo",
+  "Useful when sending to one wallet or hundreds":"Útil cuando se envía a una billetera o cientos",
+  "Try on":"Pruebatelo",
+  "blog":"Blog",
+  "now":"Ahora",
+  "launch-on":"LANZAMIENTO EN",
+  "Senders are also able to reclaim assets that have not been redeemed. Only the ASA sender can return assets to themselves. ASAs that have been redeemed by the recipient cannot be unsent and returned":"Los remitentes también pueden reclamar activos que no han sido redimidos. Solo el remitente ASA puede devolver los activos a sí mismo. Los ASA que han sido redimidos por el destinatario no se pueden desviar y devolver",
+  "More detailed instructions here":"Instrucciones más detalladas aquí",
+  "Mailbox User Guide":"Guía del usuario del buzón",
+  "Connect sending wallet to application and enter ASA Asset ID you  wish to send":"Conecte la billetera de envío a la aplicación e ingrese el ID de activo de ASA que desea enviar",
+  "Create and upload CSV file with wallet addresses and amounts to be sent":"Cree y cargue un archivo CSV con direcciones de billetera y montos a enviar",
+  "Send assets and inform recipients to redeem them on Algodex Mailbox. You need to provide the sending wallet address which users will need to claim the ASAs":"Envíe activos e informe a los destinatarios para canjearlos en Algodex Mailbox. Debe proporcionar la dirección de la billetera de envío que los usuarios necesitarán para reclamar los ASA",
+  "Opt-in to the ASA you wish to redeem in your Algorand wallet. You will need the sender’s Wallet address as well":"Inscríbase en el ASA que desea canjear en su billetera Algorand. También necesitará la dirección de Wallet del remitente",
+  "Go to “Redeem Assets” and enter information required":"Vaya a “Canjear activos” e ingrese la información requerida",
+  "Asset ID":"ID de activo",
+  "Sender Address":"Dirección del remitente",
+  "Recieving Address":"Dirección de recepción",
+  "Click “Redeem” and assets will be sent to your wallet":"Haga clic en “Canjear” y los activos se enviarán a su billetera"
 }
