--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -78,5 +78,7 @@
   "How does Algodex Mailbox Work?": "How does Algodex Mailbox Work?",
   "Algodex Mailbox uses Algorand smart contracts to create an escrow that holds sent Algorand Standard Assets before they are redeemed. The smart contract escrow exists entirely on the Algorand blockchain so nobody, including Algodex Mailbox, can access the escrow except for the sender and recipient.": "Algodex Mailbox uses Algorand smart contracts to create an escrow that holds sent Algorand Standard Assets before they are redeemed. The smart contract escrow exists entirely on the Algorand blockchain so nobody, including Algodex Mailbox, can access the escrow except for the sender and recipient.",
   "Learn to use Algodex Mailbox using our": "Learn to use Algodex Mailbox using our",
-  "guide": "guide"
+  "guide": "guide",
+  "Link above takes users to the redeem page of this site and autofills sender address. Receivers will need to opt into the asset before claiming":"Link above takes users to the redeem page of this site and autofills sender address. Receivers will need to opt into the asset before claiming",
+  "Receivers already opted into the asset before it was sent will automatically receive them without needing to redeem via Algodex Mailbox or other steps":"Receivers already opted into the asset before it was sent will automatically receive them without needing to redeem via Algodex Mailbox or other steps"
 }
