--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -80,5 +80,11 @@
   "Learn to use Algodex Mailbox using our": "Aprende a usar el Buzón de Algodex usando nuestro",
   "guide": "guía",
   "Link above takes users to the redeem page of this site and autofills sender address. Receivers will need to opt into the asset before claiming":"El enlace anterior lleva a los usuarios a la página de canje de este sitio y autocompleta la dirección del remitente. Los receptores deberán optar por el activo antes de reclamar",
-  "Receivers already opted into the asset before it was sent will automatically receive them without needing to redeem via Algodex Mailbox or other steps":"Los destinatarios que ya optaron por el activo antes de que se enviara lo recibirán automáticamente sin necesidad de canjearlo a través del buzón de Algodex u otros pasos"
+  "Receivers already opted into the asset before it was sent will automatically receive them without needing to redeem via Algodex Mailbox or other steps":"Los destinatarios que ya optaron por el activo antes de que se enviara lo recibirán automáticamente sin necesidad de canjearlo a través del buzón de Algodex u otros pasos",
+  "Sorry, an error occurred":"Disculpe, ocurrió un error",
+  "Please disable your popup blocker (likely in the top-right of your browser window)":"Deshabilite su bloqueador de ventanas emergentes (probablemente en la parte superior derecha de la ventana de su navegador)",
+  "Share this link with receiver(s) to redeem asset(s)":"Comparta este enlace con los destinatarios para canjear activos",
+  "Find below the duplicate wallet address":"Encuentre debajo la dirección de la billetera duplicada",
+  "transaction(s) sent successfully":"transacciones enviadas con éxito",
+  "transaction(s) returned successfully":"transacciones devueltas con éxito"
 }
