--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -86,5 +86,7 @@
   "Share this link with receiver(s) to redeem asset(s)":"Share this link with receiver(s) to redeem asset(s)",
   "Find below the duplicate wallet address":"Find below the duplicate wallet address",
   "transaction(s) sent successfully":"transaction(s) sent successfully",
-  "transaction(s) returned successfully":"transaction(s) returned successfully"
+  "transaction(s) returned successfully":"transaction(s) returned successfully",
+  "Send to escrow if recipient is not opted in":"Send to escrow if recipient is not opted in",
+  "If checked, this will send to escrows on behalf of wallets that have not opted into the asset. Otherwise, it will skip sending to these wallet addresses.":"If checked, this will send to escrows on behalf of wallets that have not opted into the asset. Otherwise, it will skip sending to these wallet addresses."
 }
