--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -86,5 +86,6 @@
   "Share this link with receiver(s) to redeem asset(s)":"Share this link with receiver(s) to redeem asset(s)",
   "Find below the duplicate wallet address":"Find below the duplicate wallet address",
   "transaction(s) sent successfully":"transaction(s) sent successfully",
-  "transaction(s) returned successfully":"transaction(s) returned successfully"
+  "transaction(s) returned successfully":"transaction(s) returned successfully",
+  "This feature is currently not available":"This feature is currently not available"
 }
